2007-12-18  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Version bump to 2.21.5

2007-12-17  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.21.4 release.

2007-12-17  Srinivasa Ragavan  <sragavan@novell.com>

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_construct): g_assert to critical warning.

2007-12-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #336074

	* camel/camel-exchange-folder.h: (struct CamelExchangeFolder):
	* camel/camel-exchange-folder.c: (exchange_property_list),
	(exchange_getv), (exchange_setv), (class_init),
	(camel_exchange_folder_get_type): New property of Exchange folder,
	check_folder, to let user setup for each folder to check for new mail
	here or not, but only if not enabled 'check_all' for the store.
	* camel/camel-exchange-store.c: (exchange_can_refresh_folder),
	(class_init): Implements its own CamelStore::can_refresh_folder
	function - Exchange folder has a property if it should be refreshed
	always or not, so depends on this property in case parent class
	doesn't permit refresh of the folder or the store doesn't have
	enabled 'check_all' property.

2007-12-03  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.21.3 release.

2007-11-28  Suman Manjunath  <msuman@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c:
	* calendar/e-cal-backend-exchange-tasks.c: (get_from),
	(create_task_object), (modify_task_object):
	* calendar/e-cal-backend-exchange.c:
	(process_delegated_cal_object), (build_msg):
	* calendar/e-cal-backend-exchange.h: Support for Tasks delegation. 
	* mail/mail-stub-exchange.c: (unmangle_delegated_meeting_request),
	(unmangle_meeting_request_in_subscribed_inbox),
	(unmangle_sender_field), (is_foreign_folder), (get_message):
	* mail/mail-utils.c: (mail_util_demangle_meeting_related_message):
	* mail/mail-utils.h: Removing redundancy in code, demangle meeting
	related messages in subscribed inboxes.
