@@ -9,7 +9,7 @@
 	</oaf_attribute>
 
 	<oaf_attribute name="name" type="string"
-		       _value="Ximian Connector for Exchange"/>
+		       _value="Evolution Connector for Microsoft Exchange"/>
 </oaf_server>
 
 
