@@ -5,7 +5,7 @@
 <requires lib="gnome"/>
 
 <widget class="GtkWindow" id="window">
-  <property name="title" translatable="yes">Ximian Connector Configuration</property>
+  <property name="title" translatable="yes">Evolution Connector for Microsoft Exchange Configuration</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -23,7 +23,7 @@
 	  <property name="visible">True</property>
 	  <property name="position">GNOME_EDGE_START</property>
 	  <property name="title" translatable="yes">Welcome</property>
-	  <property name="text" translatable="yes">Welcome to Ximian Connector for Microsoft Exchange.
+	  <property name="text" translatable="yes">Welcome to Evolution Connector for Microsoft Exchange.
 The next few screens will help you configure Evolution
 to connect to your Exchange account.
 
@@ -52,7 +52,7 @@ Please click the &quot;Forward&quot; button to continue.</property>
 		  <child>
 		    <widget class="GtkLabel" id="label4">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Ximian Connector can use account information from your existing Outlook Web Access (OWA) account.
+		      <property name="label" translatable="yes">Evolution Connector for Microsoft Exchange can use account information from your existing Outlook Web Access (OWA) account.
 
 Enter your OWA site address (URL), username, and password, then click &quot;Forward&quot;.
 </property>
@@ -279,7 +279,7 @@ Enter your OWA site address (URL), username, and password, then click &quot;Forw
 		  <child>
 		    <widget class="GtkLabel" id="label5">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Ximian Connector could not find the Global Catalog replica for your site. Please enter the name of your Global Catalog server. You may need to ask your system administrator for the correct value.
+		      <property name="label" translatable="yes">Evolution Connector for Microsoft Exchange could not find the Global Catalog replica for your site. Please enter the name of your Global Catalog server. You may need to ask your system administrator for the correct value.
 </property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
@@ -392,7 +392,7 @@ Enter your OWA site address (URL), username, and password, then click &quot;Forw
 		  <child>
 		    <widget class="GtkLabel" id="failure_static_label">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Ximian Connector has encountered a problem configuring your Exchange account.
+		      <property name="label" translatable="yes">Evolution Connector for Microsoft Exchange has encountered a problem configuring your Exchange account.
 </property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
