@@ -1,3 +1,10 @@
+2007-12-23  Martin Meyer  <elreydetodo@gmail.com>
+
+	** Fix for bug #503356
+
+	* reference/evolution-exchange-docs.sgml: String change: 
+	"Ximian Connector" -> "Evolution Connector for Microsoft Exchange"
+
 2005-02-09  JP Rosevear  <jpr@novell.com>
 
 	* reference/Makefile.am: link to the libtool versions of the lib
