@@ -1,3 +1,14 @@
+2007-12-23  Martin Meyer  <elreydetodo@gmail.com>
+
+	** Fix for bug #503356
+
+	* storage/GNOME_Evolution_Exchange_Storage.server.in.in:
+	* storage/exchange-autoconfig-wizard.c: (owa_page_next):
+	* storage/exchange-autoconfig-wizard.glade:
+	* storage/main.c: (main):
+	* storage/ximian-connector-setup.c: (main): String change: 
+	"Ximian Connector" -> "Evolution Connector for Microsoft Exchange"
+
 2007-12-18  Srinivasa Ragavan  <sragavan@novell.com>
 
 	* configure.in: Version bump to 2.21.5
